--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
+    "chart.js": "^3.8.0",
     "firebase": "^9.8.4",
     "framer-motion": "^6.3.16",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.2.0",
     "react-cssfx-loading": "^2.0.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
