--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "chart.js": "^3.8.0",
+    "date-fns": "^2.28.0",
     "firebase": "^9.8.4",
     "framer-motion": "^6.3.16",
     "react": "^18.2.0",
