--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "uniqid": "^5.4.0",
+    "use-typed-event-listener": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
