--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.7.4",
     "uniqid": "^5.4.0",
     "use-debounce": "^8.0.1",
+    "use-sound": "^4.0.1",
     "use-typed-event-listener": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
